# shuriken-skills

./: Cargo.toml  GEMINI.md  LICENSE  README.md  gemini-extension.json  package.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.opencode/: INSTALL.md
.opencode/plugins/: shuriken-skills.js
skills/__fixture__/: SKILL.md
skills/agent-keys/: SKILL.md
skills/api-integration/: SKILL.md
skills/learn-about-shuriken/: SKILL.md
skills/scoping/: SKILL.md
src/: frontmatter.rs  lib.rs
tests/: frontmatter_validity.rs
