[package]
name = "shuriken-skills"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Agent-consumable integration skills for the Shuriken platform"
repository = "https://github.com/ShurikenTrade/shuriken-skills"

[dependencies]
include_dir = "0.7"
gray_matter = { version = "0.2", default-features = false, features = ["yaml"] }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
